--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "ssh2": "^0.5.0"
   },
+  "bin": {
+        "rokku": "./rokku.js"
+      },
   "devDependencies": {},
   "scripts": {
   },
