--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "rokku",
-  "version": "1.0.0",
+  "version": "1.0.7",
   "description": "simple CLI tool for creating an managing Dokku apps",
   "main": "rokku.js",
   "dependencies": {
     "ssh2": "^0.5.0"
   },
-  "bin": {
-        "rokku": "./rokku.js"
-      },
   "devDependencies": {},
   "scripts": {
   },
@@ -16,10 +13,20 @@
     "type": "git",
     "url": "git+https://github.com/speedygfw/rokku.git"
   },
+  "config" : {
+     "host" : "",
+     "port" : 22,
+     "keypath" : "",
+     "username": ""
+   },
+  "bin": {
+    "rokku": "bin/rokku.js"
+  },
   "keywords": [
     "dokku",
     "dokkuclient",
-    "ssh2wrapper"
+    "ssh2wrapper",
+    "dokku toolbelt"
   ],
   "author": "Frank Wallenborn",
   "license": "ISC",
